--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ hex = "0.4"
 tracing = "0.1.0"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 parking_lot = "0.12.3"
+clap = { version = "4.4.18", features = ["derive"] }
